force-app/main/default/objects/ANZARD_Data__c/fields/COMMENT__c.field-meta.xml
<CustomField>
    <fullName>COMMENT__c</fullName>
    <description>For essential comments, such as Pregnancy End Date has been Approximated.</description>
    <label>COMMENT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>