force-app/main/default/objects/ANZARD_Data__c/fields/FDOB_NON_PAT__c.field-meta.xml
<CustomField>
    <fullName>FDOB_NON_PAT__c</fullName>
    <formula>IF( PARENT_SEX__c = &quot;3&quot;, CYCLE_ID__r.Patient__r.Partner__r.Birthdate ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FDOB_NON_PAT</label>
    <type>Date</type>
</CustomField>