force-app/main/default/objects/ANZARD_Data__c/fields/PR_END_DT__c.field-meta.xml
<CustomField>
    <fullName>PR_END_DT__c</fullName>
    <description>The end of a pregnancy includes delivery, miscarriage or termination. 

If it is known that the pregnancy ended, but the exact pregnancy end date is
unknown, please enter an approximate date in PR_END_DT and note
“PR_END_DT approximated” in the COMMENT field along with any other
information.
Where multiple births occur over more than one date, record the date of the first
born baby.
If there was no clinical pregnancy, leave this data item blank</description>
    <label>PR_END_DT</label>
    <type>Date</type>
</CustomField>