force-app/main/default/objects/ANZARD_Data__c/fields/SURR__c.field-meta.xml
<CustomField>
    <fullName>SURR__c</fullName>
    <formula>&quot;n&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SURR</label>
    <type>Text</type>
</CustomField>