force-app/main/default/objects/ANZARD_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CYCLE_ID__c</columns>
    <columns>CYC_DATE__c</columns>
    <columns>N_EGGS__c</columns>
    <columns>N_CL_ET__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>N_CL_ET__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>